# OpenEnv-challenge-RL

./: .gitignore  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  __init__.py  client.py  complete_guide.md  models.py  notes.md  openenv.yaml  pyproject.toml  test_env.py  visualize.py
server/: Dockerfile  __init__.py  app.py  requirements.txt  supply_chain_environment.py
train_rl_agent/: TRL_TRAINING_GUIDE.md  train_with_trl.py  trl_grpo_training.py
