[project]
name = "supply-chain-env"
version = "0.1.0"
description = "A simple supply chain management RL environment"
requires-python = ">=3.11"

dependencies = [
    "openenv @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
